<resources>
    <string name="app_name">Group7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_paying">PayingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="titleMaToDoor_textview">MAT-TO-DOOR</string>
    <string name="addressView_textview">addressView</string>
    <string name="seeYourCart_textview">%1$d items\t\t\t\t\t\t See your shopping cart  \t\t\t\t\t %2$d kr</string>
    <string name="foodName_textview">%1$s</string>
    <string name="foodPrice_textview">%1$d kr</string>
    <string name="foodAddToCart_textview">Add to cart</string>
    <string name="foodAmount_textview">%1$d</string>
    <string name="drinkName_textview">%1$s</string>
    <string name="drinkPrice_textview">%1$d kr</string>
    <string name="drinkAddToCart_textview">Add to cart</string>
    <string name="drinkAmount_textview">%1$d</string>
    <string name="menuItem_textview">%1$s</string>
    <string name="shoppingCart_price_textview">%1$d kr</string>
    <string name="shoppingCartCount_textview">%1$d</string>
    <string name="addMoreProducts_textview">Add more products</string>
    <string name="yourOrder_textview">Your order:</string>
    <string name="shoppingCartTotalPrice_textview">%1$d kr</string>
    <string name="total_textview">Total</string>
    <string name="hintName_textview">Name</string>
    <string name="hintPhoneNumber_textview">Phone number</string>
    <string name="hintPostCode_textview">Postcode</string>
    <string name="hintAddress_textview">Address</string>
    <string name="hintCity_textview">City</string>
    <string name="cardPayment_textview">Card payment</string>
    <string name="cardNumber_textview">Card Number</string>
    <string name="month_textview">MM</string>
    <string name="year_textview">YY</string>
    <string name="CCV_textview">CCV/CVV (three digits)</string>
    <string name="expirationDate_textview">Expiration date</string>
    <string name="virgule_textview">/</string>
    <string name="titleQuestionWindow">Takeaway or home delivery</string>
    <string name="bodyTextQuestionWindow">You can choose between receiving the food home or pickup at the restaurant</string>
    <string name="takeaway_button">Takeaway</string>
    <string name="homeDelivery_button">Home delivery</string>
    <string name="takeaway_textview">Takeaway</string>
    <string name="homeDelivery_textview">Home delivery</string>
    <string name="thanksOrder_textview">Thanks for your order!</string>
    <string name="waitForConfirmation_textview">Waiting for confirmation..</string>
    <string name="orderConfirmed_textview">The order is confirmed!</string>
    <string name="deliveryMinutes_textview">About %1$d min</string>
    <string name="hintEmail_editText">Email</string>
    <string name="hintPassword_editText">Password</string>
    <string name="hintAddress_editText">Address</string>
    <string name="food_textview">Food</string>
    <string name="drink_textview">Drink</string>
    <string name="adminFoodName_textview">%1$s</string>
    <string name="adminFoodPrice_textview">%1$d kr</string>
    <string name="adminDrinkName_textview">%1$s</string>
    <string name="adminDrinkPrice_textview">%1$d kr</string>
    <string name="uploading_textview">Uploading..</string>
    <string name="orderEstimatedReady_textview">The order is estimated to be ready about</string>
    <string name="estimatedDeliveryTime_textview">%1$s</string>
    <string name="hintMinutes_editText">Enter minutes</string>
    <string name="customerTitle_textview">Customer</string>
    <string name="customerName_textview">Name: %1$s</string>
    <string name="customerAddress_textview">Address: %1$s</string>
    <string name="customerPhoneNumber_textview">Phone number: %1$s</string>
    <string name="itemSubTitle_textview">Items:</string>
    <string name="customerPostCodeCity_textview">%1$s, %2$s</string>
    <string name="customerTakeaway_textview">Takeaway</string>
    <string name="customerHomeDelivery_textview">Home delivery</string>
    <string name="estimatedHomeDelivery_textview">Estimated home delivery about</string>
    <string name="newOrderTitle">New order!</string>
    <string name="mainAddress_textview">%1$s</string>
    <string name="mainRestaurantHeading_textview">%1$s</string>
    <string name="titleDialog_textview">There are items in your cart!</string>
    <string name="messageDialog_textview">The shopping cart will be emptied, \ndo you still want to continue?</string>
    <string name="hintAdminDisplayItemName_editText">Name</string>
    <string name="hintAdminDisplayItemPrice_editText">Price</string>
    <string name="menu_switch">Menu</string>
    <string name="drink_switch">Drink</string>
    <string name="adminDisplayItemSave_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="overviewOfOrders_textview">Overview of orders</string>
    <string name="order_textview">Order %1$d</string>
    <string name="ccvRequired_textview">You must enter CCV/CVV!</string>
    <string name="yearRequired_textview">You must enter year!</string>
    <string name="monthRequired_textview">You must enter month!</string>
    <string name="cardNumberRequired_textview">You must enter your card number!</string>
    <string name="cityRequired_textview">You must enter city!</string>
    <string name="addressRequired_textview">You must enter your address!</string>
    <string name="postCodeRequired_textview">You must enter postcode!</string>
    <string name="nameRequired_textview">You must enter your name!</string>
    <string name="yourProfile_textview">Your profile</string>

    <string name="goToCheckout_button">Go to checkout</string>
    <string name="food_button">Food</string>
    <string name="drink_button">Drink</string>
    <string name="logIn_button">Log in</string>
    <string name="change_button">Change</string>
    <string name="pay_button">Pay</string>
    <string name="ok_button">OK</string>
    <string name="saveAddress_button">Save address</string>
    <string name="signUp_button">Sign up</string>
    <string name="signIn_button">Sign in</string>
    <string name="signOut_button">Sign out</string>
    <string name="save_button">Save</string>
    <string name="profile_button">Profile</string>
    <string name="menu_button">Menu</string>
    <string name="order_button">Order</string>
    <string name="confirmOrder_button">Confirm the order</string>
    <string name="goToOverviewOfOrders_button">Go to overview of orders</string>
    <string name="yes_button">Yes</string>
    <string name="cancel_button">Cancel</string>
    <string name="show_button">Show</string>
    <string name="hide_button">Hide</string>
    <string name="amount_textview">%1$d</string>
    <string name="orderItem_textview">%1$s</string>
    <string name="x_textview">x</string>
    <string name="showOrder_button">Show the order</string>


</resources>